# tg_bot

./: .coveragerc  .dockerignore  .gitignore  README.md  docker-compose.yml  main.py  makefile  pyproject.toml  ruff.toml
.github/workflows/: coverage.yml  ruff.yml  tests.yml
dockers/: api.dockerfile
env/: env.example
scripts/: api_startup.py
src/server/core/: abstract.py  neural_generator.py  user_dto.py
src/server/neural/: abstract.py  config.py  neural_client.py  user_dto.py
src/server/neuro/: __init__.py  neuro_client.py
src/simple_api/app/: app.py
src/simple_api/core/: __init__.py  enums.py
src/simple_api/router/: __init__.py  router.py
tests/test_server/: conftest.py  test_neural_client.py
tests/test_server/core/: test_features.py
tests/test_simple_api/: conftest.py
tests/test_simple_api/test_app/: test_ping.py
